A few more tweaks